servicemesh/01_gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: default  
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
