servicemesh/01_gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: default  
  name: frontend
spec:
  hosts:
      - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: frontend.default.svc.cluster.local
            port:
                number: 8080
